resources/app-sre-stage/registry-quarkus-redhat-stage/registry-quarkus-redhat.temp.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
    haproxy.router.openshift.io/balance: source
  labels:
    service: registry-quarkus
  name: registry-quarkus-redhat-devshift
spec:
  host: registry.quarkus.stage.devshift.net
  port:
    targetPort: "8080"
  to:
    kind: Service
    name: registry-quarkus
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
